re PR tree-optimization/48616 (-ftree-vectorize -mxop miscompiles right shift)

PR tree-optimization/48616
	* tree-vect-stmts.c (vectorizable_shift): If SLP, determine
	whether the shift is by scalar or vector based on whether all SLP
	scalar stmts have the same rhs.

	* gcc.dg/pr48616.c: New test.

From-SVN: r172640